--- a/Hangman/data/hangman.css
+++ b/Hangman/data/hangman.css
@@ -6,7 +6,7 @@ body {
     justify-content: center;
     height: 100vh;
     margin: 0;
-    background-color: rgb(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 0.8);
     position: relative;
     overflow: hidden;
     min-height: 100vh;
